--- a/pom.xml
+++ b/pom.xml
@@ -49,6 +49,13 @@
             <artifactId>walkingkooka</artifactId>
             <version>master-SNAPSHOT</version>
         </dependency>
+
+        <dependency>
+            <groupId>com.github.mP1</groupId>
+            <artifactId>walkingkooka-text-cursor-parser</artifactId>
+            <version>master-SNAPSHOT</version>
+        </dependency>
+
         <dependency>
             <groupId>com.github.mP1</groupId>
             <artifactId>walkingkooka-tree-json</artifactId>
